Adiciona pipeline para o projeto

--- a/src/main/resources/br/andrew/file2web/main.fxml
+++ b/src/main/resources/br/andrew/file2web/main.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<FlowPane alignment="TOP_CENTER" columnHalignment="CENTER" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWrapLength="0.0" vgap="10.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.andrew.cnabworker.controllers.MainController">
+<FlowPane alignment="TOP_CENTER" columnHalignment="CENTER" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWrapLength="0.0" vgap="10.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.andrew.file2web.controllers.MainController">
    <children>
       <VBox fx:id="content" alignment="CENTER" spacing="10.0">
          <children>
